--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,9 @@ reportlab==4.0.7
 cryptography==41.0.7
 pandas==2.2.3
 requests
+django-redis==5.4.0
+redis==5.0.1
+hiredis==2.3.2
 
 gunicorn==21.2.0
 whitenoise==6.6.0
