fix: Move render.yaml to root and adjust paths for Blueprint
- Move render.yaml from backend/ to repository root
- Add rootDir: backend to web service config
- This allows Render to correctly find and parse the Blueprint configuration

--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,7 @@ services:
   - type: web
     name: ecommerce-backend
     env: python
+    rootDir: backend
     buildCommand: "./build.sh"
     startCommand: "gunicorn tenants_project.wsgi --log-file - --workers 2 --threads 4 --timeout 120"
     envVars:
